K8S/weather-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weatherservice
  template:
    metadata:
      labels:
        app: weatherservice
    spec:
      containers:
      - name: weatherservice
        image: zaydimr/staffing_hub_weather:latest
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        # ports:
        # - containerPort: <Port>
