K8S/global-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-cert: "grow-app-tls"
  labels:
    name: global-ingress
spec:
  ingressClassName: nginx
  tls: 
    - hosts: 
      - grow-as-team.com
      secretName: grow-app-tls
