K8S/ingress-microservices.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    name: microservices
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: /auth(/|$)(.*)
          backend:
            service:
              name: auth-service
              port: 
                number: 8080
        - pathType: Prefix
          path: /grafana(/|$)(.*)
          backend:
            service:
              name: grafana
              port: 
                number: 3000
  - http:
      paths:
        - path: /grafana
          pathType: ImplementationSpecific
          backend:
            service:
              name: grafana
              port:
                number: 3000
